--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "devDependencies": {
         "concurrently": "3.5.1",
+        "dotenv": "4.0.0",
         "husky": "0.14.3",
         "nodemon": "1.14.11",
         "prettier": "1.10.2",
