--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/socket.io": "1.4.31",
         "bootstrap": "4.0.0-beta.3",
         "date-fns": "1.29.0",
+        "flag-icon-css": "2.9.0",
         "forever": "0.15.3",
         "jsonfile": "4.0.0",
         "nuxt": "1.0.0",
