--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "generate": "yarn add mime-db && nuxt generate"
     },
     "dependencies": {
+        "@nuxtjs/google-analytics": "2.0.2",
         "@types/jsonfile": "4.0.1",
         "@types/node": "9.3.0",
         "@types/socket.io": "1.4.31",
