--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@types/jsonfile": "4.0.1",
         "@types/node": "9.3.0",
         "@types/socket.io": "1.4.31",
-        "bootstrap": "4.0.0-beta.3",
+        "bootstrap": "4.0.0",
         "date-fns": "1.29.0",
         "flag-icon-css": "2.9.0",
         "forever": "0.15.3",
@@ -35,7 +35,7 @@
         "husky": "0.14.3",
         "nodemon": "1.14.11",
         "prettier": "1.10.2",
-        "pretty-quick": "1.2.1"
+        "pretty-quick": "1.2.2"
     },
     "nodemonConfig": {
         "ext": "*.ts",
