--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "flag-icon-css": "2.9.0",
         "forever": "0.15.3",
         "jsonfile": "4.0.0",
+        "noty": "3.2.0-beta",
         "nuxt": "1.1.1",
         "qrcode": "1.2.0",
         "socket.io": "2.0.4",
