--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/node": "9.3.0",
         "@types/socket.io": "1.4.31",
         "bootstrap": "4.0.0",
+        "chart.js": "2.7.1",
         "date-fns": "1.29.0",
         "flag-icon-css": "2.9.0",
         "forever": "0.15.3",
