--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/socket.io": "1.4.31",
         "bootstrap": "4.0.0",
         "chart.js": "2.7.1",
+        "chartist": "0.11.0",
         "date-fns": "1.29.0",
         "flag-icon-css": "2.9.0",
         "forever": "0.15.3",
