--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "flag-icon-css": "2.9.0",
         "forever": "0.15.3",
         "jsonfile": "4.0.0",
+        "lodash.throttle": "4.1.1",
         "noty": "3.2.0-beta",
         "nuxt": "1.1.1",
         "qrcode": "1.2.0",
