--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@nuxtjs/google-analytics": "2.0.2",
+        "@types/dotenv": "4.0.2",
         "@types/jsonfile": "4.0.1",
         "@types/node": "9.3.0",
         "@types/socket.io": "1.4.31",
@@ -24,6 +25,7 @@
         "flag-icon-css": "2.9.0",
         "forever": "0.15.3",
         "jsonfile": "4.0.0",
+        "lodash.debounce": "4.0.8",
         "lodash.throttle": "4.1.1",
         "noty": "3.2.0-beta",
         "nuxt": "1.1.1",
