--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "flag-icon-css": "2.9.0",
         "forever": "0.15.3",
         "jsonfile": "4.0.0",
+        "keypress.js": "2.1.4",
         "lodash.debounce": "4.0.8",
         "lodash.throttle": "4.1.1",
         "noty": "3.2.0-beta",
